# N-Dimensional-Matrix

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp  matrix.cpp  matrix.h
